Updated files after renaming and changes

--- a/PetUniverseConnect/index.html
+++ b/PetUniverseConnect/index.html
@@ -91,7 +91,7 @@
           <div class="fw-bold ms-2">Connect</div>
         </div>
       </div>
-      <a href="dashboard.html" class="nav-link active">
+      <a href="index.html" class="nav-link active">
         <i class="bi bi-house-door"></i> Dashboard
       </a>
       <a href="pet-profile.html" class="nav-link">
@@ -285,6 +285,6 @@
     </div>
   </div>
 
-  <script src="js/dasboard.js"></script>
+  <script src="js\index.js"></script>
 </body>
 </html>
