final UI updates

--- a/service-directory.html
+++ b/service-directory.html
@@ -89,7 +89,7 @@
           <div class="fw-bold ms-2">Connect</div>
         </div>
       </div>
-      <a href="index.html" class="nav-link">
+      <a href="dashboard.html" class="nav-link">
         <i class="bi bi-house-door"></i> Dashboard
       </a>
       <a href="pet-profile.html" class="nav-link">
