--- a/health-record.html
+++ b/health-record.html
@@ -85,7 +85,7 @@
           <div class="fw-bold ms-2">Connect</div>
         </div>
       </div>
-      <a href="index.html" class="nav-link">
+      <a href="dashboard.html" class="nav-link">
         <i class="bi bi-house-door"></i> Dashboard
       </a>
       <a href="pet-profile.html" class="nav-link">
@@ -105,138 +105,173 @@
       </a>
     </div>
 
-<!-- Main Content -->
-<div class="main-wrapper">
-  <div class="main-content">
-    <div class="card mb-0">
-      <div class="card-body d-flex justify-content-between align-items-center">
-        <div class="d-flex align-items-center gap-3">
-          <img src="images/Ellipse 2.png" alt="" style="width: 40px; height: 30px;"/>
-          <span class="fw-semibold">Good Afternoon, Ada</span>
-        </div>
-        <div class="d-flex gap-2 align-items-center">
-          <i class="bi bi-bell-fill fs-4"></i>
-          <i class="bi bi-person-circle fs-4"></i>
-          <button class="btn btn-primary">+Add a Pet</button>
-        </div>
-      </div>
-    </div>
-
-    <!-- Pet Basic Information -->
-    <div class="card mb-0">
-      <div class="card-body">
-        <h5 class="card-title">Basic Information</h5>
-        <div class="d-flex align-items-start gap-4 flex-wrap">
-          <img src="images/46046486.jpg" alt="Pet" width="100">
-          <div class="row w-100">
-            <div class="col-md-6">
-              <p><strong>Name:</strong> Benny</p>
-              <p><strong>Species:</strong> Dog</p>
-              <p><strong>Breed:</strong> Labrador</p>
-              <p><strong>Gender:</strong> Male</p>
+    <!-- Main Content -->
+    <div class="main-wrapper">
+      <div class="main-content">
+        <div class="card mb-0">
+          <div class="card-body d-flex justify-content-between align-items-center">
+            <div class="d-flex align-items-center gap-3">
+              <img src="images/Ellipse 2.png" alt="" style="width: 40px; height: 30px;"/>
+              <span class="fw-semibold" id="greeting-text">Good Afternoon, Ada</span>
             </div>
-            <div class="col-md-6">
-              <p><strong>Date of Birth / Age:</strong> 07/04/2020</p>
-              <p><strong>Owner’s Name:</strong> Grace Danielle</p>
-              <p><strong>Contact:</strong> +234062913619</p>
-              <p><strong>Emergency Contact:</strong> +234062913619</p>
+            <div class="d-flex gap-2 align-items-center position-relative">
+              <i class="bi bi-bell-fill fs-4" id="notif-icon" style="cursor: pointer;"></i>
+              <div id="notif-dropdown" class="position-absolute bg-white border rounded p-2" style="top: 40px; right: 90px; display: none; z-index: 1000;">
+                <p class="mb-0">No new notifications</p>
+              </div>
+
+              <i class="bi bi-person-circle fs-4" id="profile-icon" style="cursor: pointer;"></i>
+              <div id="profile-dropdown" class="position-absolute bg-white border rounded p-2" style="top: 40px; right: 30px; display: none; z-index: 1000;">
+                <a href="#" class="dropdown-item"><i class="bi bi-gear me-2"></i> Settings</a>
+                <a href="#" class="dropdown-item"><i class="bi bi-box-arrow-right me-2"></i> Logout</a>
+              </div>
+
+              <button class="btn btn-primary btn-sm" id="addPetBtn">+Add a Pet</button>
             </div>
           </div>
         </div>
-      </div>
-    </div>
 
-    <!-- Veterinary Contact Information -->
-    <div class="card mb-0">
-      <div class="card-body">
-        <h5 class="card-title">Veterinary Contact Information</h5>
-        <div class="row">
-          <div class="col-md-6">
-            <p><strong>Clinic Name:</strong> Pet Universe</p>
-            <p><strong>Veterinarian’s Name:</strong> Louise Hillary</p>
-            <p><strong>Clinic Address:</strong> No.13 Off Chelsea Street, Highcost Abuja</p>
-            <p><strong>Phone:</strong> +234 8154923739</p>
+        <!-- Pet Basic Information -->
+        <div class="card mb-0">
+          <div class="card-body">
+            <h5 class="card-title">Basic Information</h5>
+            <div class="d-flex align-items-start gap-4 flex-wrap">
+              <img src="images/46046486.jpg" alt="Pet" width="100">
+              <div class="row w-100">
+                <div class="col-md-6">
+                  <p><strong>Name:</strong> Benny</p>
+                  <p><strong>Species:</strong> Dog</p>
+                  <p><strong>Breed:</strong> Labrador</p>
+                  <p><strong>Gender:</strong> Male</p>
+                </div>
+                <div class="col-md-6">
+                  <p><strong>Date of Birth / Age:</strong> 07/04/2020</p>
+                  <p><strong>Owner’s Name:</strong> Grace Danielle</p>
+                  <p><strong>Contact:</strong> +234062913619</p>
+                  <p><strong>Emergency Contact:</strong> +234062913619</p>
+                </div>
+              </div>
+            </div>
           </div>
-          <div class="col-md-6">
-            <p><strong>Email:</strong> PetUniverse@gmail.com</p>
-            <p><strong>After-Hours/Emergency:</strong> +2348164913719</p>
+        </div>
+
+        <!-- Veterinary Contact Information -->
+        <div class="card mb-0">
+          <div class="card-body">
+            <h5 class="card-title">Veterinary Contact Information</h5>
+            <div class="row">
+              <div class="col-md-6">
+                <p><strong>Clinic Name:</strong> Pet Universe</p>
+                <p><strong>Veterinarian’s Name:</strong> Louise Hillary</p>
+                <p><strong>Clinic Address:</strong> No.13 Off Chelsea Street, Highcost Abuja</p>
+                <p><strong>Phone:</strong> +234 8154923739</p>
+              </div>
+              <div class="col-md-6">
+                <p><strong>Email:</strong> PetUniverse@gmail.com</p>
+                <p><strong>After-Hours/Emergency:</strong> +2348164913719</p>
+              </div>
+            </div>
           </div>
         </div>
-      </div>
-    </div>
 
-    <!-- Vaccination History -->
-    <div class="card mb-0">
-      <div class="card-body">
-        <h5 class="card-title">Vaccination History</h5>
-        <div class="table-responsive">
-          <table class="table table-bordered">
-            <thead class="table-light">
-              <tr>
-                <th>Vaccine Name</th>
-                <th>Date Administered</th>
-                <th>Next Due Date</th>
-                <th>Clinic/Vet Name</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>Rabies</td>
-                <td>04/06/2204</td>
-                <td>23/06/2205</td>
-                <td>Pet City</td>
-              </tr>
-              <tr>
-                <td>Parvovirus</td>
-                <td>03/06/2204</td>
-                <td>23/06/2205</td>
-                <td>Pet Care</td>
-              </tr>
-              <tr>
-                <td>Bordetella</td>
-                <td>05/06/2204</td>
-                <td>23/06/2205</td>
-                <td>Pet Care</td>
-              </tr>
-              <tr>
-                <td>Feline Leukemia</td>
-                <td>23/08/2204</td>
-                <td>23/06/2205</td>
-                <td>Pet Hospital</td>
-              </tr>
-            </tbody>
-          </table>
+        <!-- Vaccination History -->
+        <div class="card mb-0">
+          <div class="card-body">
+            <h5 class="card-title">Vaccination History</h5>
+            <div class="table-responsive">
+              <table class="table table-bordered">
+                <thead class="table-light">
+                  <tr>
+                    <th>Vaccine Name</th>
+                    <th>Date Administered</th>
+                    <th>Next Due Date</th>
+                    <th>Clinic/Vet Name</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>Rabies</td>
+                    <td>04/06/2204</td>
+                    <td>23/06/2205</td>
+                    <td>Pet City</td>
+                  </tr>
+                  <tr>
+                    <td>Parvovirus</td>
+                    <td>03/06/2204</td>
+                    <td>23/06/2205</td>
+                    <td>Pet Care</td>
+                  </tr>
+                  <tr>
+                    <td>Bordetella</td>
+                    <td>05/06/2204</td>
+                    <td>23/06/2205</td>
+                    <td>Pet Care</td>
+                  </tr>
+                  <tr>
+                    <td>Feline Leukemia</td>
+                    <td>23/08/2204</td>
+                    <td>23/06/2205</td>
+                    <td>Pet Hospital</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
         </div>
-      </div>
-    </div>
 
-    <!-- Medical History -->
-    <div class="card mb-0">
-      <div class="card-body">
-        <h5 class="card-title">Medical History</h5>
-        <div class="table-responsive">
-          <table class="table table-bordered">
-            <thead class="table-light">
-              <tr>
-                <th>Previous Illnesses/Injuries</th>
-                <th>Surgeries (Type, Date, Clinic)</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>None</td>
-                <td>Hip Surgery - 25/07/2024 - Pet Hospital</td>
-              </tr>
-            </tbody>
-          </table>
+        <!-- Medical History -->
+        <div class="card mb-0">
+          <div class="card-body">
+            <h5 class="card-title">Medical History</h5>
+            <div class="table-responsive">
+              <table class="table table-bordered">
+                <thead class="table-light">
+                  <tr>
+                    <th>Previous Illnesses/Injuries</th>
+                    <th>Surgeries (Type, Date, Clinic)</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>None</td>
+                    <td>Hip Surgery - 25/07/2024 - Pet Hospital</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
         </div>
+
       </div>
     </div>
-
   </div>
-</div>
 
+  <!-- Add Pet Modal -->
+  <div id="addPetModal" class="position-fixed top-0 start-0 w-100 h-100 d-none justify-content-center align-items-center" style="background-color: rgba(0,0,0,0.5); z-index: 1050;">
+    <div class="bg-white p-4 rounded" style="width: 100%; max-width: 400px;">
+      <h5 class="mb-3">Add New Pet</h5>
+      <form id="addPetForm">
+        <div class="mb-3">
+          <label for="petName" class="form-label">Pet Name</label>
+          <input type="text" class="form-control" id="petName" required>
+        </div>
+        <div class="mb-3">
+          <label for="petSpecies" class="form-label">Species</label>
+          <input type="text" class="form-control" id="petSpecies" required>
+        </div>
+        <div class="mb-3">
+          <label for="petAge" class="form-label">Age</label>
+          <input type="number" class="form-control" id="petAge" required>
+        </div>
+        <div class="d-flex justify-content-end">
+          <button type="button" class="btn btn-secondary me-2" id="cancelAddPet">Cancel</button>
+          <button type="submit" class="btn btn-primary">Add Pet</button>
+        </div>
+      </form>
+    </div>
   </div>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="js/health-record.js"></script>
 </body>
 </html>
