--- a/index.html
+++ b/index.html
@@ -1,290 +1,158 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>User Dashboard</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
-  <style>
-    body {
-      margin: 0;
-      background-color: #f8f9fa;
-      font-family: 'Segoe UI', sans-serif;
-    }
-    .layout-wrapper {
-      display: flex;
-      min-height: 100vh;
-    }
-    .sidebar {
-      width: 270px;
-      background-color: #E1EAEF82;
-      padding: 2rem 2rem 1rem 2rem;
-      box-sizing: border-box;
-      overflow-y: auto;
-      padding-top: 20px;
-      border-right: 1px solid #dee2e6;
-    }
-    .main-wrapper {
-      flex-grow: 1;
-    }
-    .main-content {
-      height: 100%;
-      background-color: #ffffff;
-      padding: 2rem;
-    }
-    .nav-link {
-      color: #333;
-      padding: 0.5rem 0.75rem;
-      font-weight: 500;
-      border-radius: 0.375rem;
-      display: flex;
-      align-items: center;
-      margin-bottom: 3rem;
-    }
-    .nav-link i {
-      margin-right: 10px;
-      font-size: 1.3rem;
-    }
-    .nav-link:hover {
-      background-color: #e9ecef;
-      color: #000;
-    }
-    .nav-link.active {
-      background-color: #0868f7;
-      color: #fff !important;
-    }
-    @media (max-width: 768px) {
-      .layout-wrapper {
-        flex-direction: column;
-      }
-      .sidebar {
-        width: 100%;
-        position: relative;
-        border-right: none;
-        border-bottom: 1px solid #dee2e6;
-      }
-    }
-    .card-box {
-      border: 1px solid #dee2e6;
-      border-radius: 20px;
-      padding: 1rem;
-      background-color: #f0f2f5;
-      text-align: left;
-      font-weight: 450;
-      font-size: 1.5rem;
-      min-height: 180px;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-    }
-  </style>
-</head>
-<body>
-  <div class="layout-wrapper">
-    <!-- Sidebar -->
-    <div class="sidebar">
-      <div class="d-flex align-items-start mb-4">
-        <img src="images/Vector.png" alt="pet logo" width="30" height="30" class="me-2 mt-1" />
-        <div class="d-flex flex-column" style="font-size: 1.5rem;">
-          <span class="fw-bold" style="line-height: 1;">PetUniverse</span>
-          <div class="fw-bold ms-2">Connect</div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>PetUniverse Connect</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
+   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"/>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <style>
+        .blockquote {
+  background-color: #f8f9fa;       /* Light gray background */
+  padding: 1.5rem 2rem;            /* Comfortable padding */
+  border-radius: 12px;             /* Rounded corners */
+  box-shadow: 0 2px 8px rgba(0,0,0,0.1); /* Soft shadow */
+  min-height: 180px;               /* Optional consistent height */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.blockquote footer {
+  margin-top: 1rem;
+  font-weight: 600;
+  font-style: normal;
+  color: #495057;
+  user-select: none;               /* Prevent blue highlight on selection */
+}
+
+.blockquote p {
+  font-size: 1.1rem;
+  line-height: 1.5;
+  color: #212529;
+}
+.testimonial-user {
+  background: none !important;    /* Remove any background */
+  box-shadow: none !important;    /* Remove shadows */
+  outline: none !important;       /* Remove outlines */
+  padding: 0;                     /* Remove padding */
+  margin-top: 1rem;               /* Space above user name */
+  font-weight: 600;
+  font-style: normal;
+  color: #495057;
+  display: block;
+  user-select: text;              /* Allow text selection */
+}
+    </style>
+    <header class="navbar">
+      <div class="logo">
+        <img src="images\Vector.png" alt="" >
+        <span class="fw-bold">PetUniverse<br>Connect</span>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Services</a></li>
+          <li><a href="community.html">Community</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <section class="hero">
+      <div class="hero-content">
+        <h1>All-in-One Pet Care<br /><span>for Every Pet Parent</span></h1>
+        <p>Track health, learn, connect & find pet services–all in one place</p>
+        <button class="login-btn"><a href="login.html"> Login </a></button>
+      </div>
+      <div class="hero-img">
+        <img src="images\ai-generated-woman-holding-dogs-in-her-arms-on-transparent-background-ai-generated-free-png 1.jpg" alt="Woman hugging dog"/>
+      </div>
+    </section>
+
+    <section class="features" id="services">
+      <h2>Why PetUniverse Connect?</h2>
+      <div class="feature-grid">
+        <div class="feature-image">
+          <img src="images\cat-dog-gazing-into-camera-against-white-backdrop_908985-53316 1.jpg"
+            alt="Dog and Cat" style="width: 360px; height: 260px;"/>
+        </div>
+        <div class="feature-icon">
+          <img src="images\Vector (3).png" alt="Paw icon" style="width: 70px; height: 70px;" />
+          <div>Health Tracking<br /><span>Made Simple</span></div>
+        </div>
+        <div class="feature-icon">
+          <img src="images\Vector (2).png" alt="Search icon"/>
+          <div>Learn with<br /><span>Trusted Content</span></div>
+        </div>
+        <div class="feature-icon">
+          <img src="images\Vector (1).png" alt="Stethoscope icon"/>
+          <div>Find Vets & Services<br /><span>Nearby</span></div>
         </div>
       </div>
-      <a href="index.html" class="nav-link active">
-        <i class="bi bi-house-door"></i> Dashboard
-      </a>
-      <a href="pet-profile.html" class="nav-link">
-        <i class="bi bi-house-heart"></i> Pet Profile
-      </a>
-      <a href="health-record.html" class="nav-link">
-        <i class="bi bi-heart"></i> Health Record
-      </a>
-      <a href="resources.html" class="nav-link">
-        <i class="bi bi-journal-text"></i> Resources
-      </a>
-      <a href="service-directory.html" class="nav-link">
-        <i class="bi bi-geo-alt"></i> Service Directory
-      </a>
-      <a href="community.html" class="nav-link">
-        <i class="bi bi-people"></i> Community
-      </a>
-    </div>
-    <!-- Main Content -->
-    <div class="main-wrapper">
-      <div class="main-content">
-        <!-- Header -->
-        <div class="d-flex justify-content-between align-items-center mb-4">
-          <div class="d-flex align-items-center gap-3">
-            <img src="images/Ellipse 2.png" alt="" style="width: 40px; height: 30px;" />
-            <span class="fw-semibold">Good Afternoon, Ada</span>
-          </div>
-          <div class="d-flex align-items-center gap-3 position-relative">
-            <i id="notif-icon" class="bi bi-bell fs-4" style="cursor: pointer;"></i>
-            <i id="profile-icon" class="bi bi-person-circle fs-4" style="cursor: pointer;"></i>
-            <button class="btn btn-primary btn-sm">+ Add a Pet</button>
+    </section>
 
-            <!-- Notification Dropdown -->
-            <div
-              id="notif-dropdown"
-              class="position-absolute bg-white border shadow-sm p-3"
-              style="top: 40px; right: 100px; width: 250px; display: none; z-index: 10; border-radius: 10px;"
-            >
-              <p class="fw-bold mb-2">Notifications</p>
-              <p class="text-muted mb-1">• Appointment on June 6</p>
-              <p class="text-muted mb-1">• Benny’s vaccination added</p>
-              <p class="text-muted">• New care tips available</p>
+    <section class="bg-light py-5">
+        <div class="container text-center">
+            <h2>What Our Users Are Saying</h2>
+            <div class="row g-4">
+                <div class="col-md-6 mb-4">
+                    <blockquote class="blockquote">
+                        <p>"As a new pet parent, I was overwhelmed. PetConnect Universe helped me track vaccinations, find care, learn, connect & it's all in one place. It made everything feel so easy!"</p>
+                        <footer class="testimonial-user">Jane Doe</footer>
+                    </blockquote>
+                </div>
+                <div class="col-md-6">
+                    <blockquote class="blockquote">
+                        <p>"With my work schedule, I kept missing my dog's checkups. Now, the reminders and resources from PetConnect Universe keep me on track. I can't imagine managing without it!"</p>
+                        <footer class="testimonial-user">John Smith</footer>
+                    </blockquote>
+                </div>
             </div>
-
-            <!-- Profile Dropdown -->
-            <div
-              id="profile-dropdown"
-              class="position-absolute bg-white border shadow-sm p-3"
-              style="top: 40px; right: 50px; width: 150px; display: none; z-index: 10; border-radius: 10px;"
-            >
-              <p class="mb-2"><i class="bi bi-gear me-2"></i>Settings</p>
-              <p class="mb-0"><i class="bi bi-box-arrow-right me-2"></i>Logout</p>
-            </div>
-          </div>
+            <button class="btn btn-secondary btn-lg mt-3">Join our Community</button>
         </div>
-
-        <!-- Dashboard Cards -->
-        <h5 class="mb-4 fw-semibold">My Dashboard</h5>
-        <div class="row g-3 mb-4">
-          <div class="col-md-4">
-            <div class="card-box">
-              <div>Pets</div>
-              <div class="fs-3 mt-2 fw-bold">3</div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="card-box">
-              <div>Upcoming<br />Appointments</div>
-              <div class="fs-3 mt-2 fw-bold">1</div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="card-box">
-              <div> Vaccinations</div>
-              <div class="fs-3 mt-2 fw-bold">1</div>
-            </div>
-          </div>
-        </div>
-
-        <!-- My Pet Today -->
-        <h5 class="mb-3 fw-semibold">My Pet Today</h5>
-        <div class="d-flex flex-wrap align-items-start gap-3 mb-4">
-          <div
-            class="d-flex align-items-center p-4"
-            style="min-height: 180px; width: 100%; max-width: 600px; border: 2px solid #dee2e6; border-radius: 30px;"
-          >
-            <img
-              src="images/46046486.jpg"
-              alt="Dog"
-              class="rounded-circle me-3"
-              style="width: 120px; height: 120px; object-fit: cover"
-            />
+    </section>
+    
+    <footer class="bg-dark text-white py-4">
+        <div class="container d-flex justify-content-between">
             <div>
-              <p class="mb-1 fw-bold">
-                Pet Name: <span class="fw-normal">Benny</span>
-              </p>
-              <p class="mb-1 fw-bold">2 years old</p>
-              <p class="mb-1">
-                <span class="fw-bold">Breed:</span> Labrador
-              </p>
-              <p class="mb-1"> ✔ Vaccinated</p>
-              <p class="mb-1"> ✘ Vet Visit</p>
+                <h5>PetUniverseConnect</h5>
+                <ul class="list-unstyled">
+                    <li><a href="#" class="text-white">Our Mission</a></li>
+                    <li><a href="#" class="text-white">Team</a></li>
+                    <li><a href="#" class="text-white">Careers</a></li>
+                </ul>
             </div>
-          </div>
-          <div class="align-self-center ms-5">
-            <button id="updateHealthBtn" class="btn btn-primary">Update Health Record</button>
-          </div>
-        </div>
-
-        <!-- Reminder & Articles -->
-        <div class="row g-3">
-          <div class="col-md-6">
-            <div class="p-4" style="border: 1px solid #dee2e6; border-radius: 20px;">
-              <h6 class="fw-bold mb-2">
-                Reminder <i class="bi bi-calendar-event"></i>
-              </h6>
-              <p class="mb-1">Betty’s deworming is due tomorrow</p>
-              <p class="mb-0">Charlie missed its vaccination last week</p>
+            <div>
+                <h5>Support</h5>
+                <ul class="list-unstyled">
+                    <li><a href="#" class="text-white">Help Center</a></li>
+                    <li><a href="#" class="text-white">Contact Us</a></li>
+                    <li><a href="#" class="text-white">FAQs</a></li>
+                    <li><a href="#" class="text-white">Community Guidelines</a></li>
+                </ul>
             </div>
-          </div>
-          <div class="col-md-6">
-            <div class="p-4" style="border: 1px solid #dee2e6; border-radius: 20px;">
-              <div class="d-flex justify-content-between align-items-center mb-2">
-                <h6 class="fw-bold mb-0">New Articles</h6>
-                <a href="#" class="text-decoration-none">View all</a>
-              </div>
-              <p class="mb-1">How to take care of a Parrot</p>
-              <p class="mb-0">Fast procedure to treat flea in Birds.</p>
+            <div>
+                <h5>Legal</h5>
+                <ul class="list-unstyled">
+                    <li><a href="#" class="text-white">Terms of Services</a></li>
+                    <li><a href="#" class="text-white">Accessibility</a></li>
+                </ul>
             </div>
-          </div>
+            <div>
+                <h5>Follow Us</h5>
+                <ul class="list-inline">
+                    <li class="list-inline-item"><a href="#" class="text-white"><i class="bi bi-facebook"></i></a></li>
+                    <li class="list-inline-item"><a href="#" class="text-white"><i class="bi bi-instagram"></i></a></li>
+                    <li class="list-inline-item"><a href="#" class="text-white"><i class="bi bi-youtube"></i></a></li>
+                    <li class="list-inline-item"><a href="#" class="text-white"><i class="bi bi-twitter"></i></a></li>
+                </ul>
+            </div>
         </div>
-      </div>
-    </div>
-  </div>
-
-  <!-- Add Pet Modal -->
-  <div
-    id="addPetModal"
-    class="position-fixed top-0 start-0 w-100 h-100 align-items-center justify-content-center"
-    style="background-color: rgba(0,0,0,0.4); display: none; z-index: 20;"
-  >
-    <div class="bg-white p-4 rounded" style="width: 400px; border-radius: 15px;">
-      <h5 class="fw-bold mb-3">Add New Pet</h5>
-      <form id="addPetForm">
-        <div class="mb-2">
-          <label for="petName" class="form-label">Pet Name</label>
-          <input type="text" class="form-control" id="petName" required />
-        </div>
-        <div class="mb-2">
-          <label for="petSpecies" class="form-label">Species</label>
-          <input type="text" class="form-control" id="petSpecies" required />
-        </div>
-        <div class="mb-2">
-          <label for="petAge" class="form-label">Age</label>
-          <input type="number" class="form-control" id="petAge" required />
-        </div>
-        <div class="d-flex justify-content-end mt-3">
-          <button type="button" class="btn btn-secondary me-2" id="cancelAddPet">Cancel</button>
-          <button type="submit" class="btn btn-primary">Save</button>
-        </div>
-      </form>
-    </div>
-  </div>
-
-  <!-- Update Health Modal -->
-  <div
-    id="updateHealthModal"
-    style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%;
-    background: rgba(0,0,0,0.5); justify-content: center; align-items: center; z-index: 1050;"
-  >
-    <div class="bg-white p-4 rounded" style="width: 400px;">
-      <h5 class="fw-bold mb-3">Update Health Record</h5>
-      <form id="updateHealthForm">
-        <div class="form-check">
-          <input class="form-check-input" type="checkbox" id="updateVacc" />
-          <label class="form-check-label" for="updateVacc">Vaccinations</label>
-        </div>
-        <div class="form-check">
-          <input class="form-check-input" type="checkbox" id="updateDeworm" />
-          <label class="form-check-label" for="updateDeworm">Deworming</label>
-        </div>
-        <div class="form-check">
-          <input class="form-check-input" type="checkbox" id="updateSurgery" />
-          <label class="form-check-label" for="updateSurgery">Surgeries</label>
-        </div>
-        <div class="mt-4 d-flex justify-content-between">
-          <button type="submit" class="btn btn-success">Save</button>
-          <button type="button" id="cancelHealthUpdate" class="btn btn-secondary">Cancel</button>
-        </div>
-      </form>
-    </div>
-  </div>
-
-  <script src="js\index.js"></script>
-</body>
+        © 2025 PetConnect Universe. All rights reserved.
+    </footer>
+  </body>
 </html>
