--- a/pet-profile.html
+++ b/pet-profile.html
@@ -5,8 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Pet Profile</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
   <style>
+    /* Your existing CSS unchanged */
     body {
       margin: 0;
       background-color: #f8f9fa;
@@ -91,41 +92,72 @@
   <div class="layout-wrapper">
     <div class="sidebar">
       <div class="d-flex align-items-start mb-4">
-        <img src="images/Vector.png" alt="pet logo" width="30" height="30" class="me-2 mt-1">
+        <img src="images/Vector.png" alt="pet logo" width="30" height="30" class="me-2 mt-1" />
         <div class="d-flex flex-column" style="font-size: 1.5rem;">
           <span class="fw-bold" style="line-height: 1;">PetUniverse</span>
           <div class="fw-bold ms-2">Connect</div>
         </div>
       </div>
-      <a href="index.html" class="nav-link"><i class="bi bi-house-door"></i> Dashboard</a>
+      <a href="dashboard.html" class="nav-link"><i class="bi bi-house-door"></i> Dashboard</a>
       <a href="pet-profile.html" class="nav-link active"><i class="bi bi-house-heart"></i> Pet Profile</a>
-      <a href="health-record.html" class="nav-link"><i class="bi bi-heart"></i> Health Record</a>
+      <a href="health-record.html" class="nav-link"><i class="bi bi-heart"></i> Health Records</a>
       <a href="resources.html" class="nav-link"><i class="bi bi-journal-text"></i> Resources</a>
       <a href="service-directory.html" class="nav-link"><i class="bi bi-geo-alt"></i> Service Directory</a>
       <a href="community.html" class="nav-link"><i class="bi bi-people"></i> Community</a>
     </div>
     <div class="main-wrapper">
       <div class="main-content">
-        <div class="d-flex justify-content-between align-items-center mb-4">
+        <div class="d-flex justify-content-between align-items-center mb-4 position-relative">
           <div class="d-flex align-items-center gap-3">
             <img src="images/Ellipse 2.png" alt="User" style="width: 40px; height: 30px;" />
-            <span class="fw-semibold">Good Afternoon, Ada</span>
+            <span class="fw-semibold"><span id="greeting-text"></span></span>
           </div>
           <div class="d-flex align-items-center gap-3">
-            <i class="bi bi-bell fs-4" style="cursor: pointer;"></i>
-            <i class="bi bi-person-circle fs-4" style="cursor: pointer;"></i>
-            <button class="btn btn-primary btn-sm">+ Add a Pet</button>
+            <div class="position-relative">
+              <i class="bi bi-bell fs-4" id="notif-icon" style="cursor: pointer;"></i>
+              <div
+                id="notif-dropdown"
+                class="position-absolute bg-white shadow rounded p-2"
+                style="top: 100%; right: 0; display: none; z-index: 999;"
+              >
+                <small class="text-muted">No new notifications</small>
+              </div>
+            </div>
+            <div class="position-relative">
+              <i class="bi bi-person-circle fs-4" id="profile-icon" style="cursor: pointer;"></i>
+              <div
+                id="profile-dropdown"
+                class="position-absolute bg-white shadow rounded p-2"
+                style="top: 100%; right: 0; display: none; z-index: 999;"
+              >
+                <a href="#" class="d-flex align-items-center text-dark text-decoration-none mb-2">
+                  <i class="bi bi-gear me-2"></i> Settings
+                </a>
+                <a href="#" class="d-flex align-items-center text-dark text-decoration-none">
+                  <i class="bi bi-box-arrow-right me-2"></i> Logout
+                </a>
+              </div>
+            </div>
+            <button class="btn btn-primary btn-sm" data-bs-toggle="modal" data-bs-target="#addPetModal">+ Add a Pet</button>
           </div>
         </div>
-
         <h5 class="fw-bold">Your Pet Profile</h5>
-        <p class="text-muted">Welcome to your pet’s profile. Here, you can view and manage everything about your pets<br> from health records to staying track of upcoming appointments.</p>
+        <p class="text-muted">
+          Welcome to your pet’s profile. Here, you can view and manage everything about your pets
+          <br />
+          from health records to staying track of upcoming appointments.
+        </p>
 
         <div class="row">
           <div class="col-md-4">
             <div class="profile-card">
               <div class="text-center mb-3">
-                <img src="images/46046486.jpg" alt="Dog" class="rounded-circle" style="width: 100px; height: 100px; object-fit: cover;">
+                <img
+                  src="images/46046486.jpg"
+                  alt="Dog"
+                  class="rounded-circle"
+                  style="width: 100px; height: 100px; object-fit: cover"
+                />
               </div>
               <h5 class="text-center fw-bold">Benny</h5>
               <p><strong>Species:</strong> Dog</p>
@@ -135,29 +167,29 @@
               <p><strong>Color:</strong> Cream</p>
               <p><strong>Diet:</strong> Dry kibble & chicken mix</p>
               <div class="text-center">
-                <button class="btn btn-dark mt-5">Delete Pet</button>
+                <button class="btn btn-dark mt-5" id="deletePetBtn">Delete Pet</button>
               </div>
             </div>
           </div>
 
           <div class="col-md-5 d-flex flex-column gap-3" style="border-radius: 20px;">
             <div class="info-box text-center p-0">
-                <table class="table table-bordered mb-0" style="margin-bottom: 0;">
+              <table class="table table-bordered mb-0">
                 <thead class="table-light">
-                <tr>
-              <th class="fw-bold text-center" colspan="1">Health Records</th>
-              </tr>
+                  <tr>
+                    <th class="fw-bold text-center" colspan="1">Health Records</th>
+                  </tr>
                 </thead>
                 <tbody>
                   <tr>
                     <td><i class="bi bi-check-square-fill text-success"></i> Vaccinations</td>
-                </tr>
+                  </tr>
                   <tr>
                     <td><i class="bi bi-check-square-fill text-success"></i> Deworming</td>
-                </tr>
+                  </tr>
                   <tr>
                     <td><i class="bi bi-check-square-fill text-success"></i> Surgeries</td>
-                </tr>
+                  </tr>
                 </tbody>
               </table>
             </div>
@@ -170,10 +202,97 @@
         </div>
 
         <div class="text-center mb-5">
-          <button class="btn btn-dark">Edit Profile</button>
+          <!-- THE ONLY CHANGE: Add these attributes to open modal -->
+          <button
+            class="btn btn-dark"
+            id="editProfileBtn"
+            data-bs-toggle="modal"
+            data-bs-target="#editProfileModal"
+          >
+            Edit Profile
+          </button>
         </div>
       </div>
     </div>
   </div>
+
+  <!-- Add Pet Modal -->
+  <div class="modal fade" id="addPetModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Add a New Pet</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <form id="addPetForm">
+          <div class="modal-body">
+            <div class="mb-3">
+              <label class="form-label">Pet Name</label>
+              <input type="text" class="form-control" required />
+            </div>
+            <div class="mb-3">
+              <label class="form-label">Species</label>
+              <input type="text" class="form-control" required />
+            </div>
+            <div class="mb-3">
+              <label class="form-label">Age</label>
+              <input type="number" class="form-control" required />
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+            <button type="submit" class="btn btn-primary">Save</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+
+  <!-- Edit Profile Modal -->
+  <div class="modal fade" id="editProfileModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Edit Benny's Profile</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <form id="editPetForm">
+          <div class="modal-body">
+            <div class="mb-3">
+              <label class="form-label">Species</label>
+              <input type="text" class="form-control" value="Dog" />
+            </div>
+            <div class="mb-3">
+              <label class="form-label">Gender</label>
+              <input type="text" class="form-control" value="Female" />
+            </div>
+            <div class="mb-3">
+              <label class="form-label">Breed</label>
+              <input type="text" class="form-control" value="Labrador Retriever" />
+            </div>
+            <div class="mb-3">
+              <label class="form-label">Age</label>
+              <input type="text" class="form-control" value="2 years old" />
+            </div>
+            <div class="mb-3">
+              <label class="form-label">Color</label>
+              <input type="text" class="form-control" value="Cream" />
+            </div>
+            <div class="mb-3">
+              <label class="form-label">Diet</label>
+              <input type="text" class="form-control" value="Dry kibble & chicken mix" />
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+            <button type="submit" class="btn btn-primary">Save Changes</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="js/pet-profile.js"></script>
 </body>
 </html>
