--- a/resources.html
+++ b/resources.html
@@ -108,7 +108,7 @@
           <div class="fw-bold ms-2">Connect</div>
         </div>
       </div>
-      <a href="index.html" class="nav-link"><i class="bi bi-house-door"></i> Dashboard</a>
+      <a href="dashboard.html" class="nav-link"><i class="bi bi-house-door"></i> Dashboard</a>
       <a href="pet-profile.html" class="nav-link"><i class="bi bi-house-heart"></i> Pet Profile</a>
       <a href="health-record.html" class="nav-link"><i class="bi bi-heart"></i> Health Records</a>
       <a href="resources.html" class="nav-link active"><i class="bi bi-journal-text"></i> Resources</a>
