--- a/resources.html
+++ b/resources.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Pet Resources</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
   <style>
     body {
       margin: 0;
@@ -16,6 +16,7 @@
     .layout-wrapper {
       display: flex;
       min-height: 100vh;
+      flex-direction: row;
     }
 
     .sidebar {
@@ -23,17 +24,15 @@
       background-color: #E1EAEF82;
       padding: 2rem 2rem 1rem 2rem;
       box-sizing: border-box;
-      overflow-y: auto;
-      padding-top: 20px;
       border-right: 1px solid #dee2e6;
     }
 
     .main-wrapper {
       flex-grow: 1;
+      width: 100%;
     }
 
     .main-content {
-      height: 100%;
       background-color: #ffffff;
       padding: 2rem;
     }
@@ -63,19 +62,6 @@
       color: #fff !important;
     }
 
-    @media (max-width: 768px) {
-      .layout-wrapper {
-        flex-direction: column;
-      }
-
-      .sidebar {
-        width: 100%;
-        position: relative;
-        border-right: none;
-        border-bottom: 1px solid #dee2e6;
-      }
-    }
-
     .filter-button {
       background-color: #e7f3ff;
       border: none;
@@ -94,6 +80,65 @@
       flex-wrap: wrap;
       gap: 10px;
       margin-top: 20px;
+    }
+
+    .card {
+      transition: all 0.2s ease-in-out;
+    }
+
+    .card:hover {
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+      transform: scale(1.01);
+    }
+
+    @media (max-width: 992px) {
+      .layout-wrapper {
+        flex-direction: column;
+      }
+
+      .sidebar {
+        width: 100%;
+        border-right: none;
+        border-bottom: 1px solid #dee2e6;
+        padding: 1rem;
+      }
+
+      .main-content {
+        padding: 1rem;
+      }
+
+      .d-flex.align-items-center.gap-3 {
+        flex-direction: column;
+        align-items: flex-start !important;
+      }
+
+      .row > [class*="col-"] {
+        margin-bottom: 1rem;
+      }
+    }
+
+    @media (max-width: 576px) {
+      .input-group {
+        width: 100% !important;
+      }
+
+      .d-flex.justify-content-between {
+        flex-direction: column;
+        gap: 1rem;
+      }
+
+      .card img {
+        width: 80px !important;
+        margin-right: 20px !important;
+      }
+
+      .card-title {
+        font-size: 1.2rem !important;
+      }
+
+      .filter-bar {
+        justify-content: center;
+      }
     }
   </style>
 </head>
@@ -119,73 +164,66 @@
     <!-- Main Content -->
     <div class="main-wrapper">
       <div class="main-content">
-        <div class="d-flex justify-content-between align-items-center mb-4">
+        <div class="d-flex justify-content-between align-items-center flex-wrap mb-4">
           <div class="d-flex align-items-center gap-3">
             <img src="images/Ellipse 2.png" alt="" style="width: 40px; height: 30px;" />
             <span class="fw-semibold">Good Afternoon, Ada</span>
           </div>
-          <div class="d-flex align-items-center gap-3">
+          <div class="d-flex align-items-center gap-3 flex-wrap">
             <div class="input-group" style="width: 250px;">
-              <span class="input-group-text bg-white">
-                <i class="bi bi-search"></i>
-              </span>
-              <input type="text" class="form-control" placeholder="Search" style="font-size: 1rem;" />
+              <span class="input-group-text bg-white"><i class="bi bi-search"></i></span>
+              <input type="text" class="form-control" placeholder="Search"/>
             </div>
-            <i class="bi bi-bell fs-4" style="cursor: pointer;"></i>
-            <i class="bi bi-person-circle fs-4" style="cursor: pointer;"></i>
+            <i class="bi bi-bell fs-4" title="Notifications" style="cursor: pointer;"></i>
+            <i class="bi bi-person-circle fs-4" title="Profile" style="cursor: pointer;"></i>
           </div>
         </div>
-     <p class="mb-3" style="font-weight: 400; font-size: 2rem;">Petcare Resources</p>
-        <h5 class="mb-3" style="font-weight: 600; font-size: 1rem;">Featured Topics</h5>
 
-        <div class="row mb-4">
-          <!-- Box 1 -->
-          <div class="col-md-5 mb-3">
+        <p class="mb-3" style="font-size: 2rem;">Petcare Resources</p>
+        <h5 class="mb-3" style="font-weight: 600;">Featured Topics</h5>
+
+        <!-- Card Grid -->
+        <div class="row">
+          <div class="col-lg-6 col-md-12 mb-3">
             <div class="card d-flex flex-row align-items-center p-2">
-              <img src="images/potty-training-tips-ZjqR3w4r.jpg" class="img-fluid rounded" alt="Potty Training Tips" style="width: 100px; object-fit: cover; margin-right: 50px;">
+              <img src="images/potty-training-tips-ZjqR3w4r.jpg" class="rounded" alt="Potty Training" style="width: 100px; object-fit: cover; margin-right: 30px;">
               <div class="card-body p-0">
-                <h6 class="card-title mb-2" style="font-size: 1.5rem; font-weight: 400;">Potty Training<br> Tips</h6>
+                <h6 class="card-title" style="font-size: 1.4rem;">Potty Training<br>Tips</h6>
                 <a href="#" class="btn btn-dark btn-sm mt-2">View More</a>
               </div>
             </div>
           </div>
-
-          <!-- Box 2 -->
-          <div class="col-md-5 mb-3 offset-md-1">
+          <div class="col-lg-6 col-md-12 mb-3">
             <div class="card d-flex flex-row align-items-center p-2">
-              <img src="images/FA_The-importance-of-dental-care-for-your-pet-1[1].png" class="img-fluid rounded" alt="Pet Dental Care" style="width: 100px; object-fit: cover; margin-right: 50px;">
+              <img src="images/FA_The-importance-of-dental-care-for-your-pet-1[1].png" class="rounded" alt="Dental Care" style="width: 100px; object-fit: cover; margin-right: 30px;">
               <div class="card-body p-0">
-                <h6 class="card-title mb-2" style="font-size: 1.5rem; font-weight: 400;">Pet Dental<br>Care</h6>
+                <h6 class="card-title" style="font-size: 1.4rem;">Pet Dental<br>Care</h6>
                 <a href="#" class="btn btn-dark btn-sm mt-2">View More</a>
               </div>
             </div>
           </div>
-
-          <!-- Box 3 -->
-          <div class="col-md-5 mb-3">
+          <div class="col-lg-6 col-md-12 mb-3">
             <div class="card d-flex flex-row align-items-center p-2">
-              <img src="images/socializing-an-older-dog[1].jpg" class="img-fluid rounded" alt="How to Socialize Pets" style="width: 100px; object-fit: cover; margin-right: 50px;">
+              <img src="images\socializing-an-older-dog[1].jpg" class="rounded" alt="Dental Care" style="width: 100px; object-fit: cover; margin-right: 30px;">
               <div class="card-body p-0">
-                <h6 class="card-title mb-2" style="font-size: 1.5rem; font-weight: 400;">How to Socialize<br>Pets</h6>
+                <h6 class="card-title" style="font-size: 1.4rem;">How To Socialise<br>Pets</h6>
                 <a href="#" class="btn btn-dark btn-sm mt-2">View More</a>
               </div>
             </div>
           </div>
-
-          <!-- Box 4 -->
-          <div class="col-md-5 mb-3 offset-md-1">
+          <div class="col-lg-6 col-md-12 mb-3">
             <div class="card d-flex flex-row align-items-center p-2">
-              <img src="images/8-Power-Foods-to-Add-to-Your-Dog’s-Homemade-or-Raw-Diet[1].jpg" class="img-fluid rounded" alt="Safe Pets Diets" style="width: 100px; object-fit: cover; margin-right: 50px;">
+              <img src="images\8-Power-Foods-to-Add-to-Your-Dog’s-Homemade-or-Raw-Diet[1].jpg" class="rounded" alt="Dental Care" style="width: 100px; object-fit: cover; margin-right: 30px;">
               <div class="card-body p-0">
-                <h6 class="card-title mb-2" style="font-size: 1.5rem; font-weight: 400;">Safe Pets<br>Diets</h6>
+                <h6 class="card-title" style="font-size: 1.4rem;">Safe Pets<br>Diets</h6>
                 <a href="#" class="btn btn-dark btn-sm mt-2">View More</a>
               </div>
             </div>
           </div>
         </div>
 
-        <!-- Filter Buttons -->
-        <div class="filter-bar mb-4">
+        <!-- Filters -->
+        <div class="filter-bar my-4">
           <button class="filter-button active">All</button>
           <button class="filter-button">Training</button>
           <button class="filter-button">Nutrition</button>
@@ -193,59 +231,53 @@
           <button class="filter-button">Grooming</button>
           <button class="filter-button">General Pet Tips</button>
         </div>
-      
-    
-<!-- Additional 4 Boxes -->
-<div class="row mb-4">
-  <!-- Box 5 -->
-  <div class="col-md-5 mb-3">
-    <div class="card d-flex flex-row align-items-center p-2">
-      <img src="images\basic-puppy-training-1024x548[1].jpg" class="img-fluid rounded" alt=""
-        style="width: 120px; height: auto; object-fit: cover; margin-right: 50px;">
-      <div class="card-body p-0">
-        <h6 class="card-title mb-1" style="font-size: 1.5rem; font-weight: 450;">How to Train<br>Your Puppy</h6>
-        <p class="text-muted mb-2" style="font-size: 0.9rem;">Learn tips to get your dogs<br>to obey your commands</p>
-        <a href="#" class="btn btn-dark btn-sm">View More</a>
-      </div>
-    </div>
-  </div>
 
-  <!-- Box 6 -->
-  <div class="col-md-5 mb-3 offset-md-1">
-    <div class="card d-flex flex-row align-items-center p-2">
-      <img src="images\Dog-Fitness-1068x601[1].jpg" class="img-fluid rounded" alt="Topic 6"
-        style="width: 120px; height: auto; object-fit: cover; margin-right: 50px;">
-      <div class="card-body p-0">
-        <h6 class="card-title mb-1" style="font-size: 1.5rem; font-weight: 450;">Keeping Your<br>Pet Fit</h6>
-        <p class="text-muted mb-2" style="font-size: 0.9rem;">Discover ways to maintain a<br>health weight for your pet</p>
-        <a href="#" class="btn btn-dark btn-sm">View More</a>
-      </div>
-    </div>
-  </div>
+        <!-- More Resources Section -->
+        <div class="row">
+          <div class="col-lg-6 col-md-12 mb-3">
+            <div class="card d-flex flex-row align-items-center p-2">
+              <img src="images\basic-puppy-training-1024x548[1].jpg" class="rounded" alt="Puppy Training" style="width: 100px; object-fit: cover; margin-right: 30px;">
+              <div class="card-body p-0">
+                <h6 class="card-title" style="font-size: 1.4rem;">How to Train<br>Your Puppy</h6>
+                <p class="text-muted" style="font-size: 0.9rem;">Learn tips to get your dogs to obey your commands</p>
+                <a href="#" class="btn btn-dark btn-sm">View More</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6 col-md-12 mb-3">
+            <div class="card d-flex flex-row align-items-center p-2">
+              <img src="images\Dog-Fitness-1068x601[1].jpg" class="rounded" alt="Pet First Aid" style="width: 100px; object-fit: cover; margin-right: 30px;">
+              <div class="card-body p-0">
+                <h6 class="card-title" style="font-size: 1.4rem;">Keeping Your<br>Pet Fit</h6>
+                <p class="text-muted" style="font-size: 0.9rem;">Discover Ways To Maintain a<br> Healthy Weight For Your Pet</p>
+                <a href="#" class="btn btn-dark btn-sm">View More</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6 col-md-12 mb-3">
+            <div class="card d-flex flex-row align-items-center p-2">
+              <img src="images\Importance-of-Vet-Visits[1].jpg" class="rounded" alt="Nutrition" style="width: 100px; object-fit: cover; margin-right: 30px;">
+              <div class="card-body p-0">
+                <h6 class="card-title" style="font-size: 1.4rem;">Routine Vet Visits<br> Explained</h6>
+                <p class="text-muted" style="font-size: 0.9rem;">Understand what happens<br> during a typical check-up</p>
+                <a href="#" class="btn btn-dark btn-sm">View More</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6 col-md-12 mb-3">
+            <div class="card d-flex flex-row align-items-center p-2">
+              <img src="images\cat-grooming-services[1].jpg" class="rounded" alt="Grooming" style="width: 100px; object-fit: cover; margin-right: 30px;">
+              <div class="card-body p-0">
+                <h6 class="card-title" style="font-size: 1.4rem;">Grooming<br>Basics</h6>
+                <p class="text-muted" style="font-size: 0.9rem;">Essential grooming techniques<br> for pets at home</p>
+                <a href="#" class="btn btn-dark btn-sm">View More</a>
+              </div>
+            </div>
+          </div>
+        </div>
 
-  <!-- Box 7 -->
-  <div class="col-md-5 mb-3">
-    <div class="card d-flex flex-row align-items-center p-2">
-      <img src="images\Importance-of-Vet-Visits[1].jpg" class="img-fluid rounded" alt="Topic 7"
-        style="width: 120px; height: auto; object-fit: cover; margin-right: 50px;">
-      <div class="card-body p-0">
-        <h6 class="card-title mb-1" style="font-size: 1.5rem; font-weight: 400;">Routine Vets Visits<br>Explained</h6>
-        <p class="text-muted mb-2" style="font-size: 0.9rem;">Understand what happens <br>during a typical check-up</p>
-        <a href="#" class="btn btn-dark btn-sm">View More</a>
       </div>
     </div>
   </div>
-
-  <!-- Box 8 -->
-  <div class="col-md-5 mb-3 offset-md-1">
-    <div class="card d-flex flex-row align-items-center p-2">
-      <img src="images\cat-grooming-services[1].jpg" class="img-fluid rounded" alt="Topic 8"
-        style="width: 120px; height: auto; object-fit: cover; margin-right: 50px;">
-      <div class="card-body p-0">
-        <h6 class="card-title mb-1" style="font-size: 1.5rem; font-weight: 400;">Grooming<br>Basics</h6>
-        <p class="text-muted mb-2" style="font-size: 0.9rem;">Essential grooming techniques<br> for pets at home</p>
-        <a href="#" class="btn btn-dark btn-sm">View More</a>
-      </div>
-    </div>
-  </div>
-</div>
+</body>
+</html>
