--- a/resources.html
+++ b/resources.html
@@ -279,5 +279,7 @@
       </div>
     </div>
   </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="js\resources.js"></script>
 </body>
 </html>
