--- a/service-directory.html
+++ b/service-directory.html
@@ -348,5 +348,6 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="js\service-directory.js"></script>
 </body>
 </html>
